feat: Enhance repair flow for Hitachi Yutaki integration
- Removed the previous repair flow implementation and integrated repair logic directly into the options flow.
- Added checks for missing configuration parameters and redirected users to a repair step if necessary.
- Implemented a new repair step to allow users to input missing parameters, improving user experience during setup.
- Updated translations for the repair flow to support both English and French.

--- a/custom_components/hitachi_yutaki/translations/en.json
+++ b/custom_components/hitachi_yutaki/translations/en.json
@@ -83,6 +83,14 @@
           "water_inlet_temp_entity": "Water Inlet Temperature Sensor (Optional)",
           "water_outlet_temp_entity": "Water Outlet Temperature Sensor (Optional)"
         }
+      },
+      "repair": {
+        "title": "Repair Hitachi Yutaki Configuration",
+        "description": "Your Hitachi Yutaki integration is missing required configuration parameters. Please select the missing parameters to continue.",
+        "data": {
+          "gateway_type": "Gateway Type",
+          "profile": "Heat Pump Profile"
+        }
       }
     }
   },
