feat(power): add external energy sensor support (CONF_ENERGY_ENTITY)
Allow users to configure an external lifetime energy sensor
(device_class=energy, kWh, TOTAL_INCREASING) to replace the Modbus
register 1098 for the power_consumption entity. Useful for models
with unreliable built-in counters or users with external meters.

No fallback to Modbus when configured (avoids TOTAL_INCREASING jumps).
The power_consumption entity exposes a source attribute for transparency.

Also removes deprecated thermal sensor translations (thermal_power,
daily_thermal_energy, total_thermal_energy) that are no longer needed.

--- a/custom_components/hitachi_yutaki/translations/en.json
+++ b/custom_components/hitachi_yutaki/translations/en.json
@@ -78,6 +78,7 @@
           "power_supply": "Power Supply",
           "voltage_entity": "Voltage Sensor (Optional)",
           "power_entity": "Power Sensor (Optional)",
+          "energy_entity": "Energy Sensor (Optional)",
           "water_inlet_temp_entity": "Water Inlet Temperature Sensor (Optional)",
           "water_outlet_temp_entity": "Water Outlet Temperature Sensor (Optional)"
         }
@@ -125,6 +126,7 @@
           "power_supply": "Power Supply",
           "voltage_entity": "Voltage Sensor (Optional)",
           "power_entity": "Power Sensor (Optional)",
+          "energy_entity": "Energy Sensor (Optional)",
           "water_inlet_temp_entity": "Water Inlet Temperature Sensor (Optional)",
           "water_outlet_temp_entity": "Water Outlet Temperature Sensor (Optional)"
         }
@@ -428,15 +430,6 @@
       },
       "thermal_energy_cooling_total": {
         "name": "Total Thermal Energy Cooling"
-      },
-      "thermal_power": {
-        "name": "[DEPRECATED] Thermal Power"
-      },
-      "daily_thermal_energy": {
-        "name": "[DEPRECATED] Daily Thermal Energy"
-      },
-      "total_thermal_energy": {
-        "name": "[DEPRECATED] Total Thermal Energy"
       },
       "system_state": {
         "name": "Gateway Sync State",
