--- a/custom_components/hitachi_yutaki/translations/fr.json
+++ b/custom_components/hitachi_yutaki/translations/fr.json
@@ -29,7 +29,7 @@
     "gateway_type": {
       "options": {
         "modbus_atw_mbs_02": "Modbus ATW-MBS-02",
-        "modbus_hc_a16mb": "Modbus HC-A16MB (Beta)"
+        "modbus_hc_a_mb": "Modbus HC-A(16/64)MB (Beta)"
       }
     },
     "profile": {
@@ -112,7 +112,7 @@
           "name": "Nom",
           "host": "Hôte/Adresse IP",
           "port": "Port",
-          "unit_id": "ID de l'unité (HC-A16MB uniquement, 0-15)",
+          "unit_id": "ID de l'unité (HC-A(16/64)MB uniquement, 0-15)",
           "show_advanced": "Afficher les options avancées"
         }
       },
