feat: add HC-A(16/64)MB gateway support (beta) (#195)
* feat: add HC-A16MB gateway support (beta)

Add support for the HC-A(8/16/64)MB Modbus gateway alongside the
existing ATW-MBS-02. This newer Hitachi gateway uses a different
register addressing scheme (5000 + unit_id * 200 + offset) with
separate CONTROL/STATUS ranges.

Key changes:
- Move RegisterDefinition to shared module, add write_address field
- Extend HitachiRegisterMap ABC with abstract properties for masks,
  HVAC modes, and OTC serialization
- Refactor ModbusApiClient to use register map interface instead of
  direct atw_mbs_02 imports
- Create HC-A16MB register map with full address computation,
  deserializers (unit model bitmask, cooling OTC), and bit masks
- Add gateway selection in config flow with unit_id parameter (0-15)
- Add Yutaki SC Lite, Yutampo (direct), and YCC profiles
- Update YutampoR32 detection for both direct and heuristic matching
- Add comprehensive test suite (47 tests)

* chore: apply ruff formatting, split gateway documentation PDFs

- Auto-format code with ruff (line wrapping, trailing commas)
- Replace single ATW-MBS-02 PDF with pre/post 2016 line-up versions

* fix: address review findings for HC-A16MB gateway

- Add serialize_otc_method_cooling to register map ABC (critical:
  HC-A16MB cooling OTC maps Fix=2, not Fix=3 like heating)
- Extract create_register_map factory into api/__init__.py (DRY)
- Add 0xFFFF sentinel check to convert_pressure in both gateways
- Harmonize yutampo naming: deserialize returns "yutampo_r32"
- Remove hardcoded register address from anti-legionella log
- Update CHANGELOG with HC-A16MB additions and fixes

* refactor: rename HC-A16MB → HC-A(16/64)MB to cover both gateway models

The HC-A16MB and HC-A64MB gateways are protocol-identical (same Modbus
registers). Rename internal keys, classes, files, and user-facing labels
to reflect support for both models.

--- a/custom_components/hitachi_yutaki/translations/fr.json
+++ b/custom_components/hitachi_yutaki/translations/fr.json
@@ -28,7 +28,8 @@
   "selector": {
     "gateway_type": {
       "options": {
-        "modbus_atw_mbs_02": "Modbus ATW-MBS-02"
+        "modbus_atw_mbs_02": "Modbus ATW-MBS-02",
+        "modbus_hc_a_mb": "Modbus HC-A(16/64)MB (Beta)"
       }
     },
     "profile": {
@@ -37,7 +38,9 @@
         "yutaki_s_combi": "Yutaki S Combi",
         "yutaki_s80": "Yutaki S80",
         "yutaki_m": "Yutaki M",
-        "yutampo_r32": "Yutampo R32"
+        "yutampo_r32": "Yutampo R32",
+        "yutaki_sc_lite": "Yutaki SC Lite",
+        "ycc": "YCC"
       }
     },
     "power_supply": {
@@ -109,6 +112,7 @@
           "name": "Nom",
           "host": "Hôte/Adresse IP",
           "port": "Port",
+          "unit_id": "ID de l'unité (HC-A(16/64)MB uniquement, 0-15)",
           "show_advanced": "Afficher les options avancées"
         }
       },
