chore: remove unused dev_mode option from config flow
The developer mode option was never consumed by any logic in the
integration. Remove it from the advanced settings schema, the
fallback config dict, the CONF_DEV_MODE constant, and all
translation files.

--- a/custom_components/hitachi_yutaki/translations/en.json
+++ b/custom_components/hitachi_yutaki/translations/en.json
@@ -140,8 +140,7 @@
         "description": "Configure advanced Modbus and integration settings.",
         "data": {
           "slave": "Modbus Slave ID",
-          "scan_interval": "Polling Interval (seconds)",
-          "dev_mode": "Development Mode (enables all entities)"
+          "scan_interval": "Polling Interval (seconds)"
         }
       }
     },
