refactor: move slave_id to gateway step and rename to device_id
Move the Modbus device ID field from the advanced settings step to
the gateway configuration step where host and port are configured.
Rename the config key from "slave" to "device_id" for clarity.

- Add device_id field to GATEWAY_SCHEMA and options connection step
- Remove slave field from ADVANCED_SCHEMA
- Rename CONF_SLAVE/DEFAULT_SLAVE to CONF_DEVICE_ID/DEFAULT_DEVICE_ID
- Add config entry migration (v2.1 → v2.2) to rename stored key
- Use user-provided device_id for initial connection test
- Update all translations (en, fr, nl, ro)

--- a/custom_components/hitachi_yutaki/translations/en.json
+++ b/custom_components/hitachi_yutaki/translations/en.json
@@ -64,7 +64,8 @@
         "description": "Enter the connection details for your Hitachi Yutaki heat pump gateway.",
         "data": {
           "host": "Host/IP Address",
-          "port": "Port"
+          "port": "Port",
+          "device_id": "Modbus Device ID"
         }
       },
       "profile": {
@@ -112,6 +113,7 @@
           "name": "Name",
           "host": "Host/IP Address",
           "port": "Port",
+          "device_id": "Modbus Device ID",
           "unit_id": "Unit ID (HC-A(16/64)MB only, 0-15)",
           "show_advanced": "Show advanced options"
         }
@@ -139,7 +141,6 @@
         "title": "Advanced Settings",
         "description": "Configure advanced Modbus and integration settings.",
         "data": {
-          "slave": "Modbus Slave ID",
           "scan_interval": "Polling Interval (seconds)"
         }
       }
