--- a/custom_components/hitachi_yutaki/translations/fr.json
+++ b/custom_components/hitachi_yutaki/translations/fr.json
@@ -64,7 +64,8 @@
         "description": "Entrez les détails de connexion pour votre passerelle.",
         "data": {
           "host": "Hôte/Adresse IP",
-          "port": "Port"
+          "port": "Port",
+          "device_id": "ID Périphérique Modbus"
         }
       },
       "profile": {
@@ -112,6 +113,7 @@
           "name": "Nom",
           "host": "Hôte/Adresse IP",
           "port": "Port",
+          "device_id": "ID Périphérique Modbus",
           "unit_id": "ID de l'unité (HC-A(16/64)MB uniquement, 0-15)",
           "show_advanced": "Afficher les options avancées"
         }
@@ -139,7 +141,6 @@
         "title": "Paramètres avancés",
         "description": "Configurez les paramètres avancés de Modbus et de l'intégration.",
         "data": {
-          "slave": "ID Esclave Modbus",
           "scan_interval": "Intervalle d'interrogation (secondes)"
         }
       }
