refactor: prefix Modbus connection keys with modbus_
Namespace the Modbus connection config keys (host, port, device_id)
under the modbus_ prefix to prepare for future non-Modbus gateway
types.

- CONF_HOST → CONF_MODBUS_HOST ("modbus_host")
- CONF_PORT → CONF_MODBUS_PORT ("modbus_port")
- CONF_DEVICE_ID → CONF_MODBUS_DEVICE_ID ("modbus_device_id")
- Stop importing CONF_HOST/CONF_PORT from homeassistant.const
- Update config entry migration to rename all three keys
- Update all translations (en, fr, nl, ro)

--- a/custom_components/hitachi_yutaki/translations/en.json
+++ b/custom_components/hitachi_yutaki/translations/en.json
@@ -63,9 +63,9 @@
         "title": "Connection Settings",
         "description": "Enter the connection details for your Hitachi Yutaki heat pump gateway.",
         "data": {
-          "host": "Host/IP Address",
-          "port": "Port",
-          "device_id": "Modbus Device ID"
+          "modbus_host": "Host/IP Address",
+          "modbus_port": "Port",
+          "modbus_device_id": "Modbus Device ID"
         }
       },
       "profile": {
@@ -111,9 +111,9 @@
         "description": "Enter the connection details for your Hitachi Yutaki heat pump gateway.",
         "data": {
           "name": "Name",
-          "host": "Host/IP Address",
-          "port": "Port",
-          "device_id": "Modbus Device ID",
+          "modbus_host": "Host/IP Address",
+          "modbus_port": "Port",
+          "modbus_device_id": "Modbus Device ID",
           "unit_id": "Unit ID (HC-A(16/64)MB only, 0-15)",
           "show_advanced": "Show advanced options"
         }
