--- a/custom_components/hitachi_yutaki/translations/fr.json
+++ b/custom_components/hitachi_yutaki/translations/fr.json
@@ -63,9 +63,9 @@
         "title": "Paramètres de connexion",
         "description": "Entrez les détails de connexion pour votre passerelle.",
         "data": {
-          "host": "Hôte/Adresse IP",
-          "port": "Port",
-          "device_id": "ID Périphérique Modbus"
+          "modbus_host": "Hôte/Adresse IP",
+          "modbus_port": "Port",
+          "modbus_device_id": "ID Périphérique Modbus"
         }
       },
       "profile": {
@@ -111,9 +111,9 @@
         "description": "Entrez les détails de connexion pour votre passerelle de pompe à chaleur Hitachi Yutaki.",
         "data": {
           "name": "Nom",
-          "host": "Hôte/Adresse IP",
-          "port": "Port",
-          "device_id": "ID Périphérique Modbus",
+          "modbus_host": "Hôte/Adresse IP",
+          "modbus_port": "Port",
+          "modbus_device_id": "ID Périphérique Modbus",
           "unit_id": "ID de l'unité (HC-A(16/64)MB uniquement, 0-15)",
           "show_advanced": "Afficher les options avancées"
         }
