--- a/custom_components/hitachi_yutaki/translations/ro.json
+++ b/custom_components/hitachi_yutaki/translations/ro.json
@@ -63,9 +63,9 @@
         "title": "Setări de conexiune",
         "description": "Introduceți detaliile de conexiune pentru gateway-ul dumneavoastră.",
         "data": {
-          "host": "Gazdă/Adresă IP",
-          "port": "Port",
-          "device_id": "ID Dispozitiv Modbus"
+          "modbus_host": "Gazdă/Adresă IP",
+          "modbus_port": "Port",
+          "modbus_device_id": "ID Dispozitiv Modbus"
         }
       },
       "profile": {
@@ -111,9 +111,9 @@
         "description": "Introduceți detaliile de conexiune pentru gateway-ul pompei de căldură Hitachi Yutaki.",
         "data": {
           "name": "Nume",
-          "host": "Gazdă/Adresă IP",
-          "port": "Port",
-          "device_id": "ID Dispozitiv Modbus",
+          "modbus_host": "Gazdă/Adresă IP",
+          "modbus_port": "Port",
+          "modbus_device_id": "ID Dispozitiv Modbus",
           "unit_id": "ID unitate (doar HC-A(16/64)MB, 0-15)",
           "show_advanced": "Afișare opțiuni avansate"
         }
